--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'java'
+    id "org.openapi.generator" version "7.5.0"
 }
 
 repositories {
@@ -12,15 +13,23 @@ tasks.named('test') {
 }
 
 dependencies {
-//    implementation ('org.springframework.boot:spring-boot-starter-oauth2-client'){
-//        exclude group:'org.springframework.boot', module:'spring-boot-starter'
-//        exclude group:'org.springframework.security', module:'spring-security-config'
-//    }
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.security:spring-security-oauth2-client'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+//    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+
+    // dependencies for OpenApi generated classes
+    // TODO from implementation to compileOnly
+    implementation 'com.google.code.gson:gson'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.0'
+    implementation 'io.gsonfire:gson-fire:1.9.0'
+    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+    // end list of dependencies for generated class
+
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
@@ -28,4 +37,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
 
+}
+
+openApiGenerate {
+    generatorName.set("java")
+    inputSpec.set("$rootDir/specs/starling-bank-openapi.yaml")
+    outputDir.set("$buildDir/generated")
+    apiPackage.set("com.starling.api")
+    invokerPackage.set("com.starling.invoker")
+    modelPackage.set("com.starling.model")
+    configOptions.set([
+            dateLibrary: "java8"
+    ])
+}
+sourceSets.main.java.srcDirs += ['build/generated/src/main/java']
+tasks.compileJava {
+    dependsOn(tasks.openApiGenerate)
 }
