#2 Improve handling of accountUid and categoryUid properties

--- a/src/test/resources/application-operation.properties
+++ b/src/test/resources/application-operation.properties
@@ -3,6 +3,5 @@ client.starling.baseUrl=https://api-sandbox.starlingbank.com
 client.starling.params.transactions.url_path=/api/v2/feed/account/{accountUid}/category/{categoryUid}/transactions-between
 client.starling.params.accounts.url_path=api/v2/accounts
 client.starling.params.account-balance.url_path=/api/v2/accounts/{accountUid}/balance
-client.starling.params.saving-goal.url_path=api/v2/account/{accountId}/savings-goals
-client.starling.params.saving-goal.path-params.accountId=c1222b60-96d9-4e53-963a-008a63bc8c76
+client.starling.params.saving-goal.url_path=api/v2/account/{accountUid}/savings-goals
 client.starling.params.topup-saving-goal.url_path=/api/v2/account/{accountUid}/savings-goals/{savingsGoalUid}/add-money/{transferUid}
