--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ client.starling.baseUrl=https://api-sandbox.starlingbank.com
 client.starling.params.transactions.url_path=/api/v2/feed/account/{accountUid}/category/{categoryUid}/transactions-between
 client.starling.params.accounts.url_path=api/v2/accounts
 client.starling.params.account-balance.url_path=/api/v2/accounts/{accountUid}/balance
-client.starling.params.saving-goal.url_path=api/v2/account/{accountId}/savings-goals
+client.starling.params.saving-goal.url_path=api/v2/account/{accountUid}/savings-goals
 client.starling.params.topup-saving-goal.url_path=/api/v2/account/{accountUid}/savings-goals/{savingsGoalUid}/add-money/{transferUid}
